# ecma-rs

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  PROGRESS.md  README.md  TASK-SYSTEM-SUMMARY.md  TYPESCRIPT_IMPLEMENTATION_ANALYSIS.md  TYPESCRIPT_IMPLEMENTATION_SUMMARY.md  TYPE_PARSING_COMPREHENSIVE_PLAN.md  conformance_baseline.txt  conformance_output.txt  design-doc.md  format  justfile  planner_scratchpad.md  rust-toolchain.toml  test262-results.txt  test_debug  version
bench/typecheck-ts/: Cargo.toml  README.md
conformance-harness/: Cargo.toml  README.md
conformance-harness/src/: expectations.rs  fail_on.rs  lib.rs  report.rs  shard.rs  timeout.rs
diagnostics/: Cargo.toml  README.md
diagnostics/examples/: basic.rs
diagnostics/src/: files.rs  lib.rs  paths.rs  render.rs
diagnostics/tests/: render_snapshots.rs  utf8_api_guard.rs
emit-js/: Cargo.toml
emit-js/examples/: basic.rs
emit-js/src/: asi.rs  emitter.rs  escape.rs  expr.rs  expr_js.rs  expr_ts.rs  hir.rs  js_expr.rs  js_pat.rs  js_stmt.rs  jsx.rs  jsx_emit.rs  lib.rs  module_names.rs  pat.rs  precedence.rs  stmt.rs  stmt_start.rs  ts_stmt.rs  ts_type.rs
emit-js/tests/: arrow_body_disambiguation.rs  asi_separators.rs  bigint_roundtrip.rs  class_emit.rs  diagnostics.rs  emitter.rs  export_default_expr_parens.rs  expr_js_precedence.rs  expr_optional_chaining_new.rs  expr_precedence.rs  expr_receivers.rs  expr_roundtrip_matrix.rs  expr_stmt_start.rs  for_header_parentheses.rs  hir_arrow_body_disambiguation.rs  hir_decorators.rs  hir_emit.rs  hir_file_span_start_ties.rs  hir_module_namespace_identifiers.rs  hir_roundtrip_stability.rs  hir_span_map_def_tie_break.rs  hir_undefined.rs  html_comment_hazards.rs  js_emit.rs  js_emit_literals.rs  js_stmt.rs  js_stmts.rs  jsx.rs  minify_roundtrip.rs  module_namespace_identifiers.rs  numeric_literal_roundtrip.rs  pat.rs  roundtrip.rs  stmt_sep_style.rs  stmt_separation.rs  template_literals.rs  ts_edge_cases.rs  ts_function_type_params.rs  ts_mapped_types.rs  ts_nested_generics.rs  (+12 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: type_graph.rs
hir-js/: Cargo.toml
hir-js/examples/: basic_lowering.rs
hir-js/src/: fingerprint.rs  hir.rs  ids.rs  intern.rs  lib.rs  lower.rs  lower_types.rs  span_map.rs
hir-js/tests/: lowering.proptest-regressions  lowering.rs  proptests.proptest-regressions  proptests.rs  span_map_queries.rs  types_lowering.rs
minify-js/: Cargo.toml  README.md
minify-js-cli/: Cargo.toml  README.md
minify-js-cli/src/: main.rs
minify-js-cli/tests/: human.rs  json.rs  utf8.rs
minify-js-nodejs/: Cargo.toml  README.md  index.d.ts  package-lock.json  package.json  postinstall.js  test-minify.js
minify-js-nodejs/src/: lib.rs
minify-js/examples/: basic.rs
minify-js/src/: err.rs  fuzz.rs  lib.rs  tests.rs  ts_erase.rs
minify-js/tests/: const_enum_inlining.rs  proptests.rs  ts_const_enum.rs  ts_erase_hygiene.rs  ts_erase_regressions.rs  ts_instantiation_erase.rs  ts_runtime_constructs.rs
optimize-js/: Cargo.toml
optimize-js-debugger/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
optimize-js-debugger/src/: lib.rs  main.rs
optimize-js/benches/: analysis.rs  optimize.rs  typed.rs
optimize-js/examples/: optimize_js_basic.rs
optimize-js/src/: lib.rs  types.rs
optimize-js/tests/: array_literal.rs  await_expr.rs  bigint_literal.rs  binary_ops.rs  capture.rs  cfg_determinism.rs  cfg_reroot.rs  consteval.rs  continue_stmt.rs  debugger_stmt.rs  decompile.rs  decompile_call_this.rs  decompile_foreign.rs  decompile_il.rs  decompile_names.rs  decompile_pipeline.rs  decompile_regalloc.rs  decompile_roundtrip.rs  do_while_stmt.rs  dom_caching.rs  dvn_builtin_prop.rs  dvn_correctness.rs  equality_operators.rs  for_await_of_stmt.rs  for_in_stmt.rs  for_of_stmt.rs  hir_parity.rs  import_call.rs  labeled_block.rs  labeled_loop.rs  let_decl_without_init.rs  meta_exprs.rs  object_literal.rs  opt_deterministic_cfg_prune.rs  phi_simplify.rs  postdom.rs  regex_literal.rs  registers_deterministic.rs  return_stmt.rs  ssa_rename.rs  (+11 more)
parse-js/: CONFORMANCE_PROGRESS.md  Cargo.toml  FINAL_SUMMARY.md  README.md  TYPESCRIPT_CONFORMANCE_ANALYSIS.md  analyze_failures.py  auto_fix_generator.py  conformance_output.txt  detailed_analysis.py  test_super.ts  typescript_conformance_failures.txt  typescript_conformance_output.txt
parse-js-cli/: Cargo.toml  README.md
parse-js-cli/src/: main.rs
parse-js-cli/tests/: cli.rs  parse_error.rs  timeout.rs  utf8.rs
parse-js/benches/: baseline_performance.rs  node_assoc_data.rs
parse-js/examples/: basic.rs  parse_js_basic.rs  test_jsx.rs  test_jsx_cases.rs
parse-js/notes/: syntax_gaps.md
parse-js/samples/: complex_types.ts  large_file.ts  medium_file.ts  primitive_types.ts  simple_interface.ts  very_large_file.ts
parse-js/scripts/: analyze_benchmarks.py  run_failed_conformance.sh
parse-js/src/: char.rs  error.rs  lib.rs  loc.rs  num.rs  operator.rs  token.rs
parse-js/tests/: cancellation.rs  conformance_runner.rs  diagnostics.rs  fuzz_smoke.rs  module_spans.rs  number_literals.rs  parse_options.rs  regressions.rs  string_code_units.rs  template_string_parts.rs  ts_type_predicates_edge.rs
semantic-js/: Cargo.toml  README.md
semantic-js/examples/: js_mode_basic.rs
semantic-js/src/: assoc.rs  fuzz.rs  hash.rs  lib.rs
semantic-js/tests/: fuzz_smoke.rs
test262/: Cargo.toml  README.md  manifest.toml
test262-semantic/: .gitignore  Cargo.toml  README.md
test262-semantic/src/: discover.rs  executor.rs  frontmatter.rs  harness.rs  lib.rs  main.rs  report.rs  runner.rs  suite.rs  validate.rs  (+1 more)
typecheck-ts/: Cargo.toml  build.rs
typecheck-ts-cli/: Cargo.toml  README.md
typecheck-ts-harness/: Cargo.toml  README.md  package-lock.json  package.json
typecheck-ts-harness-trace23/: Cargo.toml
typecheck-ts-harness19/: Cargo.toml
typecheck-ts-w12/: Cargo.toml
typecheck-ts-w24/: Cargo.toml
types-ts-interned/: Cargo.toml  README.md
vm-js/: Cargo.toml
(+1633 files in other folders)
