[workspace]
resolver = "2"
members = [
  "diagnostics",
  "bench/minify-js",
  "bench/typecheck-ts",
  "minify-js-cli",
  "minify-js-nodejs",
  "minify-js",
  "optimize-js-debugger",
  "optimize-js",
  "parse-js-cli",
  "parse-js",
  "emit-js",
  "symbol-js",
  "types-ts",
  "types-ts-interned",
  "hir-js",
  "typecheck-ts",
  "typecheck-ts-class17",
  "typecheck-ts-flow14",
  "typecheck-ts-ops16",
  "test262",
  "typecheck-ts-harness",
  "semantic-js",
  "typecheck-ts-const18",
  "typecheck-ts-w13",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
