[workspace]
resolver = "2"
members = [
  "diagnostics",
  "bench/minify-js",
  "bench/typecheck-ts",
  "minify-js-cli",
  "minify-js-nodejs",
  "minify-js",
  "optimize-js-debugger",
  "optimize-js",
  "parse-js-cli",
  "parse-js",
  "emit-js",
  "types-ts-interned",
  "hir-js",
  "typecheck-ts",
  "test262",
  "typecheck-ts-harness",
  "semantic-js",
  "typecheck-ts-cli",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wilsonzlin/ecma-rs"

[workspace.dependencies]
# Workspace crates (keep path + version in one place so publishable crates can
# depend on them with `workspace = true`).
diagnostics = { path = "diagnostics", version = "0.1.0" }
emit-js = { path = "emit-js", version = "0.1.0" }
hir-js = { path = "hir-js", version = "0.1.0" }
minify-js = { path = "minify-js", version = "0.6.0" }
optimize-js = { path = "optimize-js", version = "0.1.0" }
parse-js = { path = "parse-js", version = "0.24.1" }
semantic-js = { path = "semantic-js", version = "0.1.0" }
typecheck-ts = { path = "typecheck-ts", version = "0.1.0" }
types-ts-interned = { path = "types-ts-interned", version = "0.1.0" }

# Shared third-party dependencies.
ahash = "0.8.7"
aho-corasick = "1.1"
anyhow = "1.0"
assert_cmd = "2.0"
axum = "0.7.9"
axum-msgpack = "0.4.0"
bitflags = "2"
bumpalo = "3.14"
clap = "4.5.17"
criterion = "0.7"
croaring = "1.0.1"
crossbeam-utils = "0.8.21"
dashmap = "6.1.0"
derive_more = "1.0.0"
derive-visitor = "0.4.0"
fast-float = "0.2.0"
globset = "0.4"
itertools = "0.13"
json5 = "0.4"
maplit = "1"
memchr = "2"
neon = { version = "0.10", default-features = false }
num-bigint = "0.4.6"
num-traits = "0.2.19"
num_cpus = "1.16"
once_cell = "1.20.2"
ordered-float = "3"
parking_lot = "0.12"
predicates = "3.1"
pretty_assertions = "1.4"
proptest = "1"
rand = "0.9"
rayon = "1.10.0"
regex = "1.11"
rmp-serde = "1.3.0"
ryu = "1.0"
salsa = "0.18"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10"
similar = "2.1.0"
smallvec = "1.15.1"
tempfile = "3.12"
thiserror = "1.0"
tokio = "1.42.0"
toml = "0.8"
tower = "0.5.2"
tower-http = { version = "0.6.2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false }
unicode-ident = "1.0"
walkdir = "2.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
