[package]
name = "conformance-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
