[package]
name = "diagnostics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
parse-js = []

[dev-dependencies]
serde_json = { workspace = true }
