[package]
name = "emit-js"
version = "0.1.0"
edition = "2021"
description = "JavaScript/TypeScript emitter"
license = "Apache-2.0"

[dependencies]
derive-visitor = "0.4.0"
diagnostics = { path = "../diagnostics" }
hir-js = { path = "../hir-js" }
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
