[package]
name = "emit-js"
version = "0.1.0"
edition.workspace = true
description = "JavaScript/TypeScript emitter"
license.workspace = true
repository.workspace = true

[dependencies]
derive-visitor = { workspace = true }
diagnostics = { workspace = true }
hir-js = { workspace = true }
parse-js = { workspace = true, features = ["diagnostics"] }

[dev-dependencies]
parse-js = { workspace = true, features = ["diagnostics", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
