[package]
name = "ecma-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.types-ts-interned]
path = "../types-ts-interned"
features = ["fuzzing", "serde-json"]

[[bin]]
name = "type_graph"
path = "fuzz_targets/type_graph.rs"
test = false
doc = false
