[package]
name = "hir-js"
version = "0.1.0"
edition = "2021"

[dependencies]
diagnostics = { path = "../diagnostics" }
derive-visitor = "0.4.0"
parse-js = { path = "../parse-js", features = ["diagnostics"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"

[dev-dependencies]
proptest = "1"

[features]
default = []
fuzzing = []
serde = ["dep:serde"]
