[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
description = "Extremely fast JS minifier"
edition.workspace = true
name = "minify-js-cli"
publish = false
version = "0.6.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
diagnostics = { workspace = true }
minify-js = { workspace = true }
