[package]
name = "minify-js-nodejs"
publish = false
version = "0.6.0"
description = "Node.js bindings for minify-js"
authors = ["Wilson Lin <npm@wilsonl.in>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
diagnostics = { path = "../diagnostics", features = ["serde"] }
minify-js = { version = "0.6.0", path = "../minify-js" }
serde_json = "1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-1"]
