[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
description = "Extremely fast JavaScript minifier"
edition = "2021"
homepage = "https://github.com/wilsonzlin/minify-js"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
keywords = ["javascript", "compress", "minifier", "js", "ecmascript"]
license = "Apache-2.0"
name = "minify-js"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-js"
version = "0.6.0"

[dependencies]
ahash = "0.8.6"
derive-visitor = "0.4.0"
diagnostics = { path = "../diagnostics" }
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics"] }
semantic-js = { version = "0.1.0", path = "../semantic-js" }
