[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
description = "Extremely fast JavaScript minifier"
edition = "2021"
homepage = "https://github.com/wilsonzlin/minify-js"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
keywords = ["javascript", "compress", "minifier", "js", "ecmascript"]
license = "Apache-2.0"
name = "minify-js"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-js"
version = "0.6.0"

[features]
default = ["emit-minify"]
emit-minify = ["emit-js", "hir-js"]
emit-ast = ["emit-minify"]
fuzzing = []

[dependencies]
ahash = "0.8.6"
aho-corasick = "0.7"
croaring = "1.0.1"
derive-visitor = "0.4.0"
diagnostics = { path = "../diagnostics" }
emit-js = { path = "../emit-js", optional = true }
hir-js = { path = "../hir-js", optional = true }
itertools = "0.12.0"
num-bigint = "0.4.4"
once_cell = "1.19.0"
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics"] }
semantic-js = { version = "0.1.0", path = "../semantic-js" }

[dev-dependencies]
proptest = "1"
serde_json = "1"
