[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["compression", "command-line-utilities", "development-tools::build-utils", "web-programming"]
description = "Extremely fast JavaScript minifier"
edition = "2021"
homepage = "https://github.com/wilsonzlin/minify-js"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
keywords = ["javascript", "compress", "minifier", "js", "ecmascript"]
license = "Apache-2.0"
name = "minify-js"
readme = "README.md"
repository = "https://github.com/wilsonzlin/minify-js"
version = "0.6.0"

[features]
default = ["emit-minify"]
emit-minify = ["emit-js", "hir-js"]
fuzzing = []

[dependencies]
ahash = { workspace = true }
derive-visitor = { workspace = true }
diagnostics = { workspace = true }
emit-js = { workspace = true, optional = true }
hir-js = { workspace = true, optional = true }
num-bigint = { workspace = true }
parse-js = { workspace = true, features = ["diagnostics"] }
semantic-js = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
