[package]
name = "optimize-js-debugger"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
axum = "0.7.9"
axum-msgpack = "0.4.0"
diagnostics = { path = "../diagnostics", features = ["serde"] }
optimize-js = { version = "0.1.0", path = "../optimize-js", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"

[dev-dependencies]
rmp-serde = "1.3.0"
tower = "0.5.2"
