[package]
name = "optimize-js-debugger"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
axum-msgpack = { workspace = true }
diagnostics = { workspace = true, features = ["serde"] }
optimize-js = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { workspace = true, default-features = false, features = ["cors"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }

[dev-dependencies]
rmp-serde = { workspace = true }
tower = { workspace = true }
