[package]
name = "optimize-js"
version = "0.1.0"
edition = "2021"

[features]
default = []
typed = ["dep:typecheck-ts", "dep:types-ts-interned"]

[dependencies]
ahash = { version = "0.8.6", features = ["serde"] }
crossbeam-utils = "0.8.21"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
derive-visitor = "0.4.0"
itertools = "0.12.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
once_cell = "1.20.2"
diagnostics = { path = "../diagnostics", features = ["serde"] }
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics", "serde"] }
semantic-js = { path = "../semantic-js" }
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
emit-js = { version = "0.1.0", path = "../emit-js" }
hir-js = { path = "../hir-js" }
typecheck-ts = { path = "../typecheck-ts", optional = true }
types-ts-interned = { path = "../types-ts-interned", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "optimize"
harness = false
