[package]
name = "parse-js-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
diagnostics = { path = "../diagnostics", features = ["parse-js"] }
parse-js = { path = "../parse-js" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
assert_cmd = "2.0"
