[package]
name = "parse-js-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
diagnostics = { workspace = true, features = ["serde"] }
parse-js = { workspace = true, features = ["diagnostics", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
