[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["development-tools::build-utils", "web-programming"]
description = "JavaScript parsing library"
edition = "2021"
homepage = "https://github.com/wilsonzlin/parse-js"
keywords = ["javascript", "parse", "parser", "js", "ecmascript"]
license = "Apache-2.0"
name = "parse-js"
repository = "https://github.com/wilsonzlin/parse-js"
version = "0.24.1"

[dependencies]
ahash = "0.8.7"
aho-corasick = "1.1"
derive-visitor = "0.4.0"
derive_more = { version = "1.0.0", features = ["from", "try_into"] }
memchr = "2"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rayon = { version = "1.8", optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rayon = "1.8"
similar = "2.1.0"

[features]
conformance-runner = ["rayon"]

[[bin]]
name = "conformance_runner"
path = "tests/conformance_runner.rs"
required-features = ["conformance-runner"]

[[bench]]
name = "baseline_performance"
harness = false
