[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["development-tools::build-utils", "web-programming"]
description = "JavaScript parsing library"
edition = "2021"
homepage = "https://github.com/wilsonzlin/parse-js"
keywords = ["javascript", "parse", "parser", "js", "ecmascript"]
license = "Apache-2.0"
name = "parse-js"
repository = "https://github.com/wilsonzlin/parse-js"
version = "0.24.1"
autobins = false

[dependencies]
ahash = "0.8.7"
aho-corasick = "1.1"
derive-visitor = "0.4.0"
derive_more = { version = "1.0.0", features = ["from", "try_into"] }
fast-float = "0.2.0"
memchr = "2"
num-bigint = "0.4"
once_cell = "1.19.0"
ryu = "1.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
rayon = { version = "1.8", optional = true }
smallvec = "1.15.1"
unicode-ident = "1.0"
diagnostics = { path = "../diagnostics", features = ["parse-js"], optional = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
serde_json = { version = "1" }
similar = "2.1.0"

[features]
conformance-runner = ["rayon", "diagnostics", "serde", "dep:serde_json"]
diagnostics = ["dep:diagnostics"]
serde = ["dep:serde"]
serde-loc = ["serde"]

[[bin]]
name = "conformance_runner"
path = "src/bin/conformance_runner.rs"
required-features = ["conformance-runner"]

[[bench]]
name = "baseline_performance"
harness = false

[[bench]]
name = "node_assoc_data"
harness = false
