[package]
authors = ["Wilson Lin <code@wilsonl.in>"]
categories = ["development-tools::build-utils", "web-programming"]
description = "JavaScript parsing library"
edition = "2021"
homepage = "https://github.com/wilsonzlin/parse-js"
keywords = ["javascript", "parse", "parser", "js", "ecmascript"]
license = "Apache-2.0"
name = "parse-js"
repository = "https://github.com/wilsonzlin/parse-js"
version = "0.24.1"
autobins = false

[dependencies]
ahash = { workspace = true }
aho-corasick = { workspace = true }
derive-visitor = { workspace = true }
derive_more = { workspace = true, features = ["from", "try_into"] }
fast-float = { workspace = true }
memchr = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
ryu = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
smallvec = { workspace = true }
unicode-ident = { workspace = true }
diagnostics = { workspace = true, features = ["parse-js"], optional = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
serde_json = { workspace = true }
similar = { workspace = true }

[features]
conformance-runner = ["rayon", "diagnostics", "serde", "dep:serde_json"]
diagnostics = ["dep:diagnostics"]
serde = ["dep:serde"]
serde-loc = ["serde"]

[[bin]]
name = "conformance_runner"
path = "src/bin/conformance_runner.rs"
required-features = ["conformance-runner"]

[[bench]]
name = "baseline_performance"
harness = false

[[bench]]
name = "node_assoc_data"
harness = false
