[package]
name = "semantic-js"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.7"
bitflags = "2"
diagnostics = { path = "../diagnostics" }
hir-js = { path = "../hir-js" }
derive-visitor = "0.4.0"
parse-js = { version = "0.24.1", path = "../parse-js" }

[dev-dependencies]
maplit = "1"
