[package]
name = "semantic-js"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
diagnostics = { path = "../diagnostics" }
hir-js = { path = "../hir-js" }
derive-visitor = "0.4.0"
parse-js = { version = "0.24.1", path = "../parse-js" }

[dev-dependencies]
maplit = "1"
serde_json = "1"
rand = "0.8"
