[package]
name = "semantic-js"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
fuzzing = []

[dependencies]
bitflags = { workspace = true }
diagnostics = { workspace = true }
hir-js = { workspace = true }
derive-visitor = { workspace = true }
parse-js = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
rand = { workspace = true }
