[package]
name = "test262-semantic"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
# Default to the real `vm-js`-backed executor. `stub_executor` remains available
# for embeddings that only want the discovery/manifest/report plumbing.
default = []
stub_executor = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
conformance-harness = { workspace = true }
diagnostics = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
vm-js = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
