[package]
name = "test262"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
conformance-harness = { workspace = true }
diagnostics = { workspace = true }
parse-js = { workspace = true, features = ["diagnostics"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
