[package]
name = "typecheck-ts-cli"
version = "0.1.0"
edition = "2021"
description = "Standalone CLI for the typecheck-ts checker"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
diagnostics = { path = "../diagnostics", features = ["serde"] }
globset = "0.4"
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
typecheck-ts = { path = "../typecheck-ts", features = ["resolve"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
