[package]
name = "typecheck-ts-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone CLI for the typecheck-ts checker"

[dependencies]
clap = { workspace = true, features = ["derive"] }
diagnostics = { workspace = true, features = ["serde"] }
globset = { workspace = true }
json5 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
typecheck-ts = { workspace = true, features = ["resolve", "serde"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
