[package]
name = "typecheck-ts-harness-trace23"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
typecheck-ts-trace23 = { path = "../typecheck-ts-trace23" }

[dev-dependencies]
tempfile = "3"
