[package]
name = "typecheck-ts-harness"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["with-node"]
with-node = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
globset = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.12"
thiserror = "1.0"
diagnostics = { path = "../diagnostics" }
typecheck-ts = { path = "../typecheck-ts" }
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
num_cpus = "1.16"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
