[package]
name = "typecheck-ts-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["with-node"]
with-node = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
diagnostics = { workspace = true }
typecheck-ts = { workspace = true, features = ["resolve"] }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"] }
rayon = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
types-ts-interned = { workspace = true }
