[package]
name = "typecheck-ts-harness19"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
diagnostics-h19 = { path = "../diagnostics-h19" }
globset = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typecheck-ts-h19 = { path = "../typecheck-ts-h19" }
walkdir = "2.5"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
