[package]
name = "typecheck-ts-w12"
version = "0.1.0"
edition = "2021"

[dependencies]
parse-js = { path = "../parse-js" }
hir_js = { package = "hir-js-w12", path = "../hir-js-w12" }
semantic_js = { package = "semantic-js-w12", path = "../semantic-js-w12" }
types_ts = { package = "types-ts-w12", path = "../types-ts-w12" }

[dev-dependencies]
pretty_assertions = "1.4.1"
