[package]
name = "typecheck-ts-w24"
version = "0.1.0"
edition = "2021"
description = "Lightweight TypeScript type checking facade (worker 24 variant)"
license = "Apache-2.0"

[dependencies]
parse-js = { path = "../parse-js" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
