[package]
name = "typecheck-ts"
version = "0.1.0"
edition = "2021"
description = "Lightweight TypeScript type checking facade for ecma-rs"
license = "Apache-2.0"

[features]
default = ["bundled-libs", "serde"]
bundled-libs = []
serde = ["dep:serde", "diagnostics/serde", "hir-js/serde"]

[dependencies]
diagnostics = { path = "../diagnostics" }
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics"] }
semantic-js = { path = "../semantic-js" }
hir-js = { path = "../hir-js" }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
tracing = "0.1"
types-ts-interned = { path = "../types-ts-interned" }
types-ts = { path = "../types-ts" }
ahash = "0.8"
ordered-float = "3"
num-bigint = "0.4"

[dev-dependencies]
diagnostics = { path = "../diagnostics" }
semantic-js = { path = "../semantic-js" }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
