[package]
name = "typecheck-ts"
version = "0.1.0"
edition = "2021"
description = "Lightweight TypeScript type checking facade for ecma-rs"
license = "Apache-2.0"

[features]
default = ["bundled-libs", "serde"]
bundled-libs = ["dep:include_dir"]
serde = ["dep:serde", "diagnostics/serde", "hir-js/serde"]
fuzzing = ["hir-js/fuzzing", "types-ts-interned/fuzzing"]
resolve = ["dep:serde_json"]

[dependencies]
diagnostics = { path = "../diagnostics" }
hir-js = { path = "../hir-js" }
parse-js = { version = "0.24.1", path = "../parse-js", features = ["diagnostics"] }
semantic-js = { path = "../semantic-js" }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0", optional = true }
include_dir = { version = "0.7", optional = true }
thiserror = "1.0"
tracing = "0.1"
types-ts-interned = { path = "../types-ts-interned" }
ahash = "0.8"
dashmap = "5.5"
ordered-float = "3"
num-bigint = "0.4"
bumpalo = { version = "3.14", features = ["collections"] }
sha2 = "0.10"
rayon = "1.10"
smallvec = "1.15.1"
# salsa 0.18 provides the 2022 tracked/input APIs without the newer Rust 1.85 toolchain
# requirement and uses clone-based snapshots instead of the removed ParallelDatabase trait.
salsa = "0.18"
derive-visitor = "0.4.0"

[dev-dependencies]
diagnostics = { path = "../diagnostics" }
semantic-js = { path = "../semantic-js" }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
proptest = "1"
