[package]
name = "typecheck-ts"
version = "0.1.0"
edition.workspace = true
description = "Lightweight TypeScript type checking facade for ecma-rs"
license.workspace = true
repository.workspace = true

[features]
default = ["bundled-libs", "serde"]
bundled-libs = []
serde = ["dep:serde", "diagnostics/serde", "hir-js/serde", "types-ts-interned/serde"]
serde-json = ["dep:serde_json"]
fuzzing = ["hir-js/fuzzing", "types-ts-interned/fuzzing", "types-ts-interned/serde-json"]
resolve = ["serde-json"]

[dependencies]
diagnostics = { workspace = true }
hir-js = { workspace = true }
parse-js = { workspace = true, features = ["diagnostics"] }
semantic-js = { workspace = true }
serde = { workspace = true, features = ["rc"], optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
types-ts-interned = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
num-bigint = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
sha2 = { workspace = true }
rayon = { workspace = true }
smallvec = { workspace = true }
# salsa 0.18 provides the 2022 tracked/input APIs without the newer Rust 1.85 toolchain
# requirement and uses clone-based snapshots instead of the removed ParallelDatabase trait.
salsa = { workspace = true }
derive-visitor = { workspace = true }

[dev-dependencies]
diagnostics = { workspace = true }
semantic-js = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
proptest = { workspace = true }
