[package]
name = "types-ts-interned"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interned TypeScript type representation (imported from worker-10)"

[features]
default = []
fuzzing = []
serde = ["dep:serde", "hir-js/serde", "ordered-float/serde", "num-bigint/serde"]
# Enable JSON helpers such as `TypeStore::debug_json`. Implies `serde`.
serde-json = ["serde", "dep:serde_json"]
tracing = ["dep:tracing"]
strict-determinism = []

[dependencies]
hir-js = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
bitflags = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ordered-float = { workspace = true }
num-bigint = { workspace = true }
unicode-ident = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "canonicalization"
harness = false

[[bench]]
name = "evaluator"
harness = false

[[bench]]
name = "relation"
harness = false
