[package]
name = "vm-js"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
diagnostics = { workspace = true }
thiserror = { workspace = true }
parse-js = { workspace = true, features = ["diagnostics"] }
hir-js = { workspace = true }
ryu = { workspace = true }
